<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#85E3DDDD"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150dp"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/dimen_15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_30dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:layout_height="@dimen/dimen_150dp"
                android:src="@drawable/imagefarmer"
                android:scaleType="centerCrop"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_10dp"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/dimen_3dp"
                android:elevation="@dimen/dimen_3dp"
                app:cardCornerRadius="@dimen/dimen_20dp"
                >
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/dimen_15dp"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="@dimen/dimen_20dp"
                        android:id="@+id/filledTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone">

                        <!--this is the actual edit text which takes the input-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone"
                            android:background="@color/white"
                            android:inputType="phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/passward">

                        <!--this is the actual edit text which takes the input-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passward"
                            android:inputType="textPassword"
                            android:layout_marginTop="@dimen/dimen_20dp"
                            android:background="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/dimen_200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_50dp"
                        android:elevation="@dimen/dimen_3dp"
                        app:cardElevation="@dimen/dimen_3dp"
                        android:layout_gravity="center"
                        app:cardCornerRadius="@dimen/dimen_20dp"
                        android:padding="@dimen/dimen_10dp">
                        <TextView
                            android:id="@+id/Login"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/login"
                            android:textSize="@dimen/dimen_20dp"
                            android:textColor="@color/white"
                            android:background="@color/colorPrimary"
                            android:gravity="center"
                            android:padding="@dimen/dimen_10dp"
                            android:textStyle="bold"/>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:id="@+id/Register"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/new_user_register_now"
                        android:textSize="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:textColor="@color/grey"
                        android:gravity="center"
                        android:textStyle="bold"/>

                </LinearLayout>
                </ScrollView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</layout>